# RoguelikeFansBand-zh-CN-Android

./: README.md
RFB-Android-Dedicated/: PORTABLE_VERSION.txt  README.md  build_debug.bat  build_gui.bat  build_release.bat  capture_android_crash_log.bat  gradle.properties  settings.gradle  升级安装v7并保留存档.bat  打开图形化构建器.bat  抓取手机崩溃日志.bat
RFB-Android-Dedicated/app/: build.gradle  proguard-rules.pro
RFB-Android-Dedicated/app/src/main/: AndroidManifest.xml
RFB-Android-Dedicated/app/src/main/cpp/: CMakeLists.txt
RFB-Android-Dedicated/app/src/main/cpp/backend/: main-android-rfb.c  rfb_android_backend.h  rfb_jni.c
RFB-Android-Dedicated/app/src/main/cpp/config/: autoconf.h  rfb_android_compat.h
RFB-Android-Dedicated/app/src/main/java/org/roguelikefansband/android/: AssetInstaller.java  CustomHudOverlay.java  GameCommandCatalog.java  GameKeySequence.java  GameKeyboardDialog.java  MainActivity.java  PressRepeater.java  RfbAudioManager.java  RfbKeyEncoder.java  RfbNative.java  RfbTermView.java  StartupDiagnostics.java  TouchFeedbackButton.java  VirtualKeyStore.java
RFB-Android-Dedicated/app/src/main/res/drawable/: ic_launcher_foreground.xml
RFB-Android-Dedicated/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
RFB-Android-Dedicated/app/src/main/res/values/: styles.xml
RFB-Android-Dedicated/debug-signing/: README.txt  rfb-local-debug.keystore
RFB-Android-Dedicated/docs/: ARCHITECTURE.md  GUI_BUILDER.md  STARTUP_RUNTIME.md  V7_DELIVERY.md  VALIDATION.md  WARNING_AUDIT.md
RFB-Android-Dedicated/tools/: build.py  check_project.py  portable_bootstrap.ps1  portable_build.ps1  portable_gui.ps1  prepare_source.py
RFB-Android-Dedicated/tools/tests/: test_android_java_source_sanity.py  test_game_command_catalog.py  test_game_key_sequence.py  test_key_encoder.py  test_native_portability_sanity.py  test_portable_isolation.py  test_prepare_source_safety.py  test_save_directory_and_diagnostics.py  test_startup_runtime_safety.py  test_touch_hud_and_slots.py  test_warning_patch_regressions.py
